add build scripts

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "mihiraki",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/mihiraki.umd.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "vite"
+    "start": "vite",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
