--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "build": "vite build"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Hiromichi Matsushima",
+  "license": "MIT",
   "devDependencies": {
     "vite": "^3.2.1"
-  }
+  },
+  "files": [
+    "dist/*",
+    "readme.md",
+    "license.txt"
+  ]
 }
