--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mihiraki",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "E-book Viewer WebComponent",
   "main": "dist/mihiraki.umd.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,14 @@
     "build": "vite build"
   },
   "keywords": [],
-  "author": "Hiromichi Matsushima",
+  "author": {
+    "name": "hylom (Hiromichi Matsushima)",
+    "email": "hylom@hylom.net"
+  },
+  "reoisitory": {
+    "type": "git",
+    "url": "https://github.com/hylom/mihiraki-viewer"
+  },
   "license": "MIT",
   "devDependencies": {
     "vite": "^3.2.1"
